# json-schema-llm

./: .gitignore  COMPATIBILITY.md  Cargo.toml  Makefile  README-npm.md  README.md  docker-compose.test.yml  stress_test_report.md  wasm_fail2.txt  wasm_fail3.txt
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
bindings/go/: conformance_test.go  jsl.go  jsl_test.go
bindings/java/: build.gradle.kts  pom.xml  settings.gradle.kts
bindings/python/: README.md  json_schema_llm_wasi.py  pyproject.toml  test_conformance.py  test_wasi.py
bindings/python-wasi/: jsonschema_llm_wasi.py
bindings/ts/: package.json
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_e2e_tests.rs  cli_tests.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: java.rs  lib.rs  python.rs
crates/codegen/templates/java/: Component.java.tera  Generator.java.tera  README.md.tera  pom.xml.tera
crates/codegen/templates/python/: README.md.tera  component.py.tera  generator.py.tera  pyproject.toml.tera
crates/codegen/templates/typescript/: README.md.tera  component.ts.tera  package.json.tera
crates/jsonschema-llm-core/: Cargo.toml
crates/jsonschema-llm-wasm/: Cargo.toml
docs/: FUTURE_BLOCKERS.md  algorithm.md  architecture.md
engine/java/: pom.xml
engine/python/: pyproject.toml
examples/stress-test-bot-python/: README.md  main.py  requirements.txt  test_client.py
fixtures/arazzo/: README.md
fixtures/oas31/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_convert.rs
scripts/: assemble-npm.sh  generate-fixtures.sh  test-wrappers.sh
(+178 files in other folders)
