[package]
name = "jsonschema-llm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.jsonschema-llm-core]
path = "../crates/jsonschema-llm-core"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_convert"
path = "fuzz_targets/fuzz_convert.rs"
doc = false
